<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:contentDescription="@string/content_description_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:contentDescription="@string/content_description_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
</menu>